# ToyProblem-EthyleneOx

./: BET-Nonideal.ipynb  EthyleneOxRates-Literature.ipynb  ExptReactorExploration.ipynb  LICENSE  Overview-EthyleneOxide.ipynb  PoreRxnDiff.ipynb  README.md  RateExpresionExploration.ipynb  Sensitivity.ipynb  TemperatureExploration.ipynb  TurbulenceExploration.ipynb  __init__.py  _reactor.py  experiments.py  expt_integrated.p  expt_model_integrated.py  parameter_set.py  pyproject.toml  reactor_modeling.py
figures/: EthyleneOxideHierarchy.drawio  EthyleneOxideReactor-SingleTube.drawio  PoreDiagram.drawio
